# google-travel-time-comparison

./: README.md  setup.cfg
.github/workflows/: ci.yml
examples/: uk.csv
google_travel_time_comparison/: analysis.py  collect.py  config.py  main.py
google_travel_time_comparison/requests/: base_handler.py  factory.py  google_handler.py  traveltime_handler.py
test/: test_analysis.py  test_collect.py  test_config.py
test/requests/: test_google_handler.py  test_traveltime_handler.py
