[metadata]
name = google-travel-time-comparison
version = 0.1.0
author = TravelTime
description = A tool to compare travel times from Google Maps API and TravelTime API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/traveltime-dev/google-travel-time-comparison
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:
install_requires =
    aiohttp
    aiolimiter
    pandas
    pytest
    pytz
    traveltimepy

[options.entry_points]
console_scripts =
    google_travel_time_comparison = google_travel_time_comparison.main:main
